[metadata]
name=timesheets
author = Imam Usmani
description-file = README.rst
license = GNU General Public License v3.0
classifier = 
    Intended Audience :: worker
    Natural Language :: English
    Programming Language :: Python :: 3.10
    
description=interface to fill and check timesheets

[options]
zip_safe = False
include_package_data = True
install_requires =
	ipython
	flake8
	pytest
	pandas
	pandastable
packages = find:

[options.entry_points]
console_scripts =
	example = template_mvc.apps.base:example
